5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1573_1330.log
== TEST (2019-03-11 15:18:48) 
-- CODE:
round(41,8)
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:23) 
-- CODE:
round(250/6)
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:26) 
-- CODE:
round(250/6)
-- EXECUTION TIME:
0.155696
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:46) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.131582
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:47) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:25) 
-- CODE:
round(print(250/6)(2))
-- EXECUTION TIME:
0.193196
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round(print(250/6)(2))
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:27) 
-- CODE:
round(print(250/6)(2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print(250/6)(2))
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:56) 
-- CODE:
round((print(250/6))(2))
-- EXECUTION TIME:
0.128405
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round((print(250/6))(2))
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:22) 
-- CODE:
round(41,6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print(250/6)(2))
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:30) 
-- CODE:
round(41,66)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print(250/6)(2))
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:50) 
-- CODE:
round(4166, 2)
-- EXECUTION TIME:
0.133385
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:03) 
-- CODE:
round(41,66, 2)
-- EXECUTION TIME:
0.177051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 1, in <module>
    round(41,66, 2)
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:42) 
-- CODE:
print(180/6)
round(x,2)
-- EXECUTION TIME:
0.201401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    round(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:43) 
-- CODE:
print(180/6)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:57) 
-- CODE:
print(180/6)
round(2)
-- EXECUTION TIME:
0.142601
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:24) 
-- CODE:
print(180/6)
round(print,2)
-- EXECUTION TIME:
0.143785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    round(print,2)
TypeError: type builtin_function_or_method doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:25) 
-- CODE:
print(180/6)
round(print,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(print,2)
TypeError: type builtin_function_or_method doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:27) 
-- CODE:
print(180/6)
round(print,2)
-- EXECUTION TIME:
0.17565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    round(print,2)
TypeError: type builtin_function_or_method doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:01) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:23) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:32) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.130366
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:16) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.156874
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:26:48) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.184695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
